--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.5",
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "bulma": "^0.7.5",
