--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-source-filesystem": "^2.1.29",
     "gatsby-source-wordpress": "^3.1.39",
     "gatsby-transformer-sharp": "^2.2.20",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
