--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/icons": "^4.4.3",
     "bulma": "^0.7.5",
     "gatsby": "^2.15.29",
+    "gatsby-background-image": "^0.8.15",
     "gatsby-image": "^2.2.24",
     "gatsby-plugin-manifest": "^2.2.20",
     "gatsby-plugin-offline": "^3.0.11",
@@ -28,7 +29,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-youtube": "^7.9.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
