--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
+    "react-countup": "^4.2.2",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
+    "react-visibility-sensor": "^5.1.1",
     "react-youtube": "^7.9.0"
   },
   "devDependencies": {
